2008-04-19  Loic Dachary <loic@dachary.org>

	* Release 1.5.0

	* pokernetwork/pokeravatar.py, pokernetwork/pokerclient.py,
	  pokernetwork/pokerpackets.py, tests/test-pokerclient.py.in: class
	  PacketPokerBuyInLimits(Packet):
	  Semantics: the buy-in boundaries for "game_id" in the range
	  ["min","max"]. An optimal buy-in is suggested in "best".
	  
	  Direction: server => client
	  
	  Context: sent immediately after the PacketPokerTable packet.
	  
	  min: minimum buy-in in cent.
	  max: minimum buy-in in cent.
	  best: optimal buy-in in cent.
	  game_id: integer uniquely identifying a game.

2008-04-16  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerpackets.py: PacketPokerExplain must be sent
	  before login.

2008-04-15  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerpackets.py: PokerBet is not used, use
	  PokerRaise instead

2008-04-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* ChangeLog, tests/test-pokercashier.py.in: r497@hughes: bkuhn |
	  2008-04-14 22:11:19 -0400
	  * Began work on test that expects the transaction to already
	  exist in
	  counter table. Not complete yet.
	* ChangeLog, pokernetwork/pokercashier.py: r496@hughes: bkuhn |
	  2008-04-14 20:45:20 -0400
	  * #pragma: no cover is needed on this line in cashInValidateNote
	  because
	  it presumably hits a known bug in coverage.py

2008-04-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokercashier.py.in
	(PokerCashierTestCase.test10_foundCounterRowBreakingNote): Wrote function.

	* pokernetwork/pokercashier.py (PokerCashier.cashInValidateNote):
	Added '#pragma: no cover' for lines that hits bug in coverage.py.

2008-04-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokercashier.py.in
	(PokerCashierTestCase.test08_forcecashInUpdateSafeFail): Wrote function.
	Added my copyright notice.
	(PokerCashierTestCase.test09_forceCashInUpdateCounter): Wrote function.

	* pokernetwork/pokercashier.py (PokerCashier.cashInUpdateSafe):