@@ -1,3 +1,8 @@
+2008-04-19  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokercashier.py.in
+	(PokerCashierTestCase.test10_foundCounterRowBreakingNote): Wrote function.
+
 2008-04-19  Loic Dachary <loic@dachary.org>
 
 	* Release 1.5.0
